Fix word-wrap property
`break-word` is not a valid option for the CSS property `word-break`. However, it is valid for the property `word-wrap`.

--- a/css/ink.css
+++ b/css/ink.css
@@ -69,7 +69,7 @@ table {
 }
 
 td { 
-  word-break: break-word;
+  word-wrap: break-word;
   -webkit-hyphens: auto;
   -moz-hyphens: auto;
   hyphens: auto;
